--- a/templates/folder.html
+++ b/templates/folder.html
@@ -1,44 +1,75 @@
 {% extends "index.html" %}
-
 {% block content %}
-    <div class="row">
-        <div class="span12">
-            <h1 class="page-header">{{ folder.name }}</h1>
+    <!-- New Directory Modal -->
+    <div id ="newDirectory" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <!--Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4>Making new directory</h4>
+                </div>
+                <div class="modal-body">
+                    <form action="{{ url_for('create_directory') }}" method="post" id="mdform">
+                        <label> 디렉토리 이름을 입력하세요
+                            <input type="text" name="new_directory_name">
+                        </label>
+                        <input class='btn btn-primary' type="submit" value="Create directory">
+                        <input id="folder_path" type="hidden" value="{{folder.path}}" name="directory_root">
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
-    {% if folder.chunks %}
-    <ul class="breadcrumb">
-        {% for chunk in folder.chunks() %}
-            <li>
-                <a href="/files/{{ chunk.path }}">{{ chunk.chunk }}</a>
-                <span class="divider">/</span>
-            </li>
-        {% endfor %}
-    </ul>
-    {% endif %}
-    <div class="row">
-        <div class="span6">
-		<h3 class="page-header">Folders:</h3>
-    		<form action="new_directory" method="post">
-		    <input type="text" name="new_directory_name">
-		    <input type="submit" value="Create directory">
-		    <input type="hidden" value="{{folder.path}}" name="directory_root">
-	    </form> 
 
-            <ul class="nav nav-tabs nav-stacked">
+    <div>
+        {% if folder.chunks %}
+            <ul class="breadcrumb">
+                <a href="{{ url_for('index') }}">SetupBox</a>
+                {% for chunk in folder.chunks() %}
+                    <li>
+                        <a href="/files/{{ chunk.path }}">/ {{ chunk.chunk }}</a>
+                    </li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+    </div>
+
+    <div id="folderView" class="col-md-12 col-xs-12" style="padding:0px;">
+        <table class="table table-bordered table-foldersystem">
+            <thead>
+            <tr class="active">
+                <th>Type</th>
+                <th>Name</th>
+                <th>Size</th>
+                <th>Last modification time</th>
+            </tr>
+            </thead>
+            <tbody>
             {% for folder in folder.folders %}
-                <li><a href="/files/{{ folder.path }}"> <img src="../static/img/folder.png" width="20" alt="icon"> {{ folder.name }}</a></li>
+                {% if not folder.name == ".git" %}
+                    <tr class="folders_row">
+                        <td><img src="{{ url_for('static',filename='img/folder.png') }}" width="20" alt="icon"></td>
+                        <td id="{{ folder.path }}" class="folders">
+                            <a href="/files/{{ folder.path }}">{{ folder.name }}</a>
+                        </td>
+                        <td>{{ folder.size }}</td>
+                        <td>{{ folder.date }}</td>
+                    </tr>
+                {% endif %}
             {% endfor %}
-            </ul>
-        </div>
-        <div class="span6">
-            <h3 class="page-header">Files:</h3>
-            <ul class="nav nav-tabs nav-stacked">
-            {% for file in folder.files %}
-                <li><a href="/files/{{ file.path }}"> <img src="../static/img/{{ file.extension }}.png" width="20" alt="icon"> {{ file.name }}</a></li>
-            {% endfor %}
-            </ul>
-        </div>
 
+            {% for file in folder.files %}
+                <tr class="files_row">
+                    <td>
+                        <img src="{{ url_for('static',filename='img/'+ file.extension) }}.png" width="20" alt="icon">
+                    </td>
+                    <td id="{{ file.path }}" class='files'><a href="/files/{{ file.path }}">{{ file.name }}</a></td>
+                    <td>{{ file.size }}</td>
+                    <td>{{ file.date }}</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
     </div>
 {% endblock %}
